--- a/templates/base.html
+++ b/templates/base.html
@@ -255,7 +255,7 @@
         <div class="offset-md-2 col-md-4 col-12">
           <div class="footer__menus__social-container">
             <div class="footer__menus__social">
-              <a target="_blank" rel="noopener" class="social-footer" href="https://www.facebook.com/mirumeelabs/">
+              <a target="_blank" rel="noopener" class="social-footer" href="https://www.facebook.com/mzahin/">
                 <svg data-src="{% static "images/facebook-logo.svg" %}" width="45px" height="45px"/>
               </a>
               <a target="_blank" rel="noopener" class="social-footer" href="https://github.com/mirumee/saleor">
